k8s/apps/kube-prometheus-stack/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.k8s.vicio.ovh`)
      kind: Rule
      services:
        - name: kube-prometheus-stack-grafana
          port: 80
  tls:
    secretName: grafana-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-cert
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  rules:
    - host: grafana.k8s.vicio.ovh
  tls:
    - hosts:
        - grafana.k8s.vicio.ovh
      secretName: grafana-tls
